--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -24,4 +24,11 @@
   body {
     font-family: "Fira Sans", sans-serif;
   }
+
+  /* Reset default styling for text input */
+  input {
+    border-radius: 0;
+    appearance: none;
+    -webkit-appearance: none;
+  }
 }
