--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -20,6 +20,10 @@
       format("woff2");
   }
 
+  html {
+    overflow-x: hidden;
+  }
+
   html,
   body {
     font-family: "Fira Sans", sans-serif;
